// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provisionPullRequestChannel Should create channel 1`] = `
{
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "searchedChannels": [],
}
`;

exports[`provisionPullRequestChannel Should replay channel creation if channel doesn't exist and handle initial payload after that 1`] = `
{
  "createdChannels": [
    {
      "id": "12345",
      "isArchived": false,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "searchedChannels": [
    {
      "channelName": "pr-test-proj-test-repository-1",
      "includePrivateChannels": true,
    },
  ],
}
`;
